--- a/frogger/build.xml
+++ b/frogger/build.xml
@@ -10,6 +10,9 @@
 			<fileset dir="C:\Program Files\Java\javafx-sdk-11.0.2\lib">
 				<include name="*.jar"/>
 			</fileset>
+			<fileset dir="C:\Users\Administrator\.p2\pool\plugins">
+				<include name="*.jar"/>
+			</fileset>
 		</path>
 		<javac includeantruntime="false" srcdir="./src" destdir="intermediary">
 			<classpath refid="main.classpath"/>
